feat(archives): Add ar and rar archive aggregation
Include ar and rar archive modules in the archives aggregate module so
they are exposed through arkivo-archives and arkivo-all.

Assisted-by: codex:gpt-5.5